Fix T71414: Undoing change of lattice resolution deforms mesh